Add support for HBAR, RUNE, and SCRT extra info in exchange

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -417,6 +417,7 @@
   "group_by_type": "مجموعة حسب النوع",
   "haven_app": "Haven بواسطة Cake Wallet",
   "haven_app_wallet_text": "محفظة رائعة ل Haven",
+  "hbar_extra_info": "من فضلك لا تنس تحديد معرف المذكرة أثناء إرسال معاملة HBAR للتبادل",
   "help": "مساعده",
   "hidden_addresses": "العناوين المخفية",
   "hidden_balance": "الميزان الخفي",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "وصف استعادة المحفظة",
   "robinhood_option_description": "شراء وتحويل على الفور باستخدام بطاقة الخصم الخاصة بك أو حسابك المصرفي أو رصيد Robinhood. الولايات المتحدة الأمريكية فقط.",
   "router_no_route": "لم يتم تحديد مسار لـ ${name}",
+  "rune_extra_info": "يرجى عدم نسيان تحديد معرف المذكرة أثناء إرسال معاملة Rune للتبادل",
   "save": "حفظ",
   "save_backup_password": "يرجى التأكد من حفظ كلمة المرور الاحتياطية. لن تتمكن من استيراد ملفات النسخ الاحتياطي بدونها.",
   "save_backup_password_alert": "حفظ كلمة المرور الاحتياطية",
@@ -717,6 +719,7 @@
   "scan_qr_code": "امسح رمز QR ضوئيًا",
   "scan_qr_code_to_get_address": "امسح ال QR للحصول على العنوان",
   "scan_qr_on_device": "                           ﺮﺧﺁ ﺯﺎﻬﺟ ﻰﻠﻋ ﺎﻴًﺋﻮﺿ ﺍﺬﻫ ﺔﻌﻳﺮﺴﻟﺍ ﺔﺑﺎﺠﺘﺳﻻ﻿ﺍ ﺰﻣﺭ ﺢﺴﻤﺑ ﻢﻗ",
+  "scrt_extra_info": "يرجى عدم نسيان تحديد معرف المذكرة أثناء إرسال معاملة SCRT للتبادل",
   "search": "بحث",
   "search_add_token": "بحث / إضافة رمز",
   "search_category": "فئة البحث",
