--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Група по вид",
   "haven_app": "Haven от Cake Wallet",
   "haven_app_wallet_text": "Невероятен портфейл за Haven",
+  "hbar_extra_info": "Моля, не забравяйте да посочите идентификационния номер на бележката, докато изпращате HBAR транзакцията за борсата",
   "help": "Помощ",
   "hidden_addresses": "Скрити адреси",
   "hidden_balance": "Скрит баланс",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "Описание на възстановяване на портфейл",
   "robinhood_option_description": "Купете и прехвърлете незабавно с помощта на вашата дебитна карта, банкова сметка или салдо на робини. Само САЩ.",
   "router_no_route": "Няма дефиниран път за ${name}",
+  "rune_extra_info": "Моля, не забравяйте да посочите идентификационния номер на бележката, докато изпращате транзакцията Rune за борсата",
   "save": "Запази",
   "save_backup_password": "Моля, запишете своята парола за възстановяване. Импортирането на резервни копия не е възможно без нея.",
   "save_backup_password_alert": "Запазване на паролата за възстановяване",
@@ -717,6 +719,7 @@
   "scan_qr_code": "Сканирайте QR кода, за да получите адреса",
   "scan_qr_code_to_get_address": "Сканирайте QR кода, за да получите адреса",
   "scan_qr_on_device": "Сканирайте този QR код на друго устройство",
+  "scrt_extra_info": "Моля, не забравяйте да посочите идентификационния номер на бележката, докато изпращате SCRT транзакцията за борсата",
   "search": "Търсене",
   "search_add_token": "Търсене/Добавяне на токен",
   "search_category": "Търсене в категория",
