--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Skupina podle typu",
   "haven_app": "Haven od Cake Wallet",
   "haven_app_wallet_text": "Úžasná peněženka pro Haven",
+  "hbar_extra_info": "Při odeslání transakce HBAR pro výměnu nezapomeňte zadat ID Memo ID",
   "help": "pomoc",
   "hidden_addresses": "Skryté adresy",
   "hidden_balance": "Skrytý zůstatek",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "Popis obnovení peněženky",
   "robinhood_option_description": "Nakupujte a převádějte okamžitě pomocí své debetní karty, bankovního účtu nebo zůstatku Robinhood. Pouze USA.",
   "router_no_route": "Pro ${name} není definována žádná cesta",
+  "rune_extra_info": "Při odeslání transakce Rune na burzu nezapomeňte určit ID Memo ID",
   "save": "Uložit",
   "save_backup_password": "Prosím ujistěte se, že máte uschováno heslo pro zálohy. Bez něj nebudete moci naimportovat soubory se zálohami.",
   "save_backup_password_alert": "Uložit heslo pro zálohy",
@@ -717,6 +719,7 @@
   "scan_qr_code": "Naskenujte QR kód pro získání adresy",
   "scan_qr_code_to_get_address": "Prohledejte QR kód a získejte adresu",
   "scan_qr_on_device": "Naskenujte tento QR kód na jiném zařízení",
+  "scrt_extra_info": "Při odeslání transakce SCRT na burzu",
   "search": "Hledat",
   "search_add_token": "Hledat / Přidat token",
   "search_category": "Hledat kategorii",
