--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Group by type",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
+  "hbar_extra_info": "Please don’t forget to specify the Memo ID while sending the HBAR transaction for the exchange",
   "help": "help",
   "hidden_addresses": "Hidden Addresses",
   "hidden_balance": "Hidden Balance",
@@ -709,6 +710,7 @@
   "restore_wallet_restore_description": "Wallet restore description",
   "robinhood_option_description": "Buy and transfer instantly using your debit card, bank account, or Robinhood balance. USA only.",
   "router_no_route": "No route defined for ${name}",
+  "rune_extra_info": "Please don’t forget to specify the Memo ID while sending the RUNE transaction for the exchange",
   "save": "Save",
   "save_backup_password": "Please make sure that you have saved your backup password.  You will not be able to import your backup files without it.",
   "save_backup_password_alert": "Save backup password",
@@ -718,6 +720,7 @@
   "scan_qr_code": "Scan QR code",
   "scan_qr_code_to_get_address": "Scan the QR code to get the address",
   "scan_qr_on_device": "Scan this QR code on another device",
+  "scrt_extra_info": "Please don’t forget to specify the Memo ID while sending the SCRT transaction for the exchange",
   "search": "Search",
   "search_add_token": "Search / Add token",
   "search_category": "Search category",
