--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Grupo por tipo",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Increíble billetera para Haven",
+  "hbar_extra_info": "No olvide especificar la ID de memo al enviar la transacción HBAR para el intercambio",
   "help": "ayuda",
   "hidden_addresses": "Direcciones ocultas",
   "hidden_balance": "Balance oculto",
@@ -709,6 +710,7 @@
   "restore_wallet_restore_description": "Restaurar billetera",
   "robinhood_option_description": "Compra y transfiere instantáneamente utilizando su tarjeta de débito, cuenta bancaria o saldo de Robinhood. Solo EE. UU.",
   "router_no_route": "No hay ruta definida para ${name}",
+  "rune_extra_info": "No olvide especificar la ID de memo al enviar la transacción Rune para el intercambio",
   "save": "Guardar",
   "save_backup_password": "Asegúrese de haber guardado su contraseña de respaldo. No podrá importar sus archivos de respaldo sin él.",
   "save_backup_password_alert": "Guardar contraseña de respaldo",
@@ -718,6 +720,7 @@
   "scan_qr_code": "Escanear código QR",
   "scan_qr_code_to_get_address": "Escanea el código QR para obtener la dirección",
   "scan_qr_on_device": "Escanea este código QR en otro dispositivo",
+  "scrt_extra_info": "No olvide especificar la ID de memo al enviar la transacción SCRT para el intercambio",
   "search": "Búsqueda",
   "search_add_token": "Buscar/Agregar token",
   "search_category": "Categoría de búsqueda",
