--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Groupe par type",
   "haven_app": "Haven par Cake Wallet",
   "haven_app_wallet_text": "Super portefeuille (wallet) pour Haven",
+  "hbar_extra_info": "N'oubliez pas de spécifier l'ID de mémo lors de l'envoi de la transaction HBAR pour l'échange",
   "help": "aide",
   "hidden_addresses": "Adresses cachées",
   "hidden_balance": "Solde Caché",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "Description de la restauration de portefeuille (wallet)",
   "robinhood_option_description": "Achetez et transférez instantanément à l'aide de votre carte de débit, de votre compte bancaire ou de votre solde Robinhood. États-Unis seulement.",
   "router_no_route": "Aucune route définie pour ${name}",
+  "rune_extra_info": "N'oubliez pas de spécifier l'ID de mémo lors de l'envoi de la transaction Rune pour l'échange",
   "save": "Sauvegarder",
   "save_backup_password": "Merci de vous assurer d'avoir bien sauvegardé votre mot de passe de sauvegarde.  Vous ne pourrez pas restaurer vos fichiers de sauvegarde sans ce dernier.",
   "save_backup_password_alert": "Enregistrer le mot de passe de sauvegarde",
@@ -717,6 +719,7 @@
   "scan_qr_code": "Scannez le QR code",
   "scan_qr_code_to_get_address": "Scannez le QR code pour obtenir l'adresse",
   "scan_qr_on_device": "Scannez ce code QR sur un autre appareil",
+  "scrt_extra_info": "N'oubliez pas de spécifier l'ID de mémo lors de l'envoi de la transaction SCRT pour l'échange",
   "search": "Chercher",
   "search_add_token": "Rechercher / Ajouter un token",
   "search_category": "Catégorie de recherche",
