--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Rukuni ta nau'in",
   "haven_app": "Haven da Cake Wallet",
   "haven_app_wallet_text": "Aikace-aikacen e-wallet ga Haven",
+  "hbar_extra_info": "Don Allah kar a manta su saka ID na Memo yayin aika yarjejeniyar HBAR don musayar",
   "help": "taimako",
   "hidden_addresses": "Adireshin ɓoye",
   "hidden_balance": "BOYE KUDI",
@@ -710,6 +711,7 @@
   "restore_wallet_restore_description": "Bayanin dawo da walat",
   "robinhood_option_description": "Sayi da Canja wurin nan take amfani da katin debit, asusun banki, ko ma'aunin raraki. Amurka kawai.",
   "router_no_route": "Babu wata hanya da aka bayyana don ${name}",
+  "rune_extra_info": "Don Allah kar a manta su saka ID na Memo yayin aika yanayin Rune don musayar",
   "save": "Ajiye",
   "save_backup_password": "Da fatan za a tabbatar cewa kun adana kalmar sirrin ajiyar ku. Ba za ku iya shigo da fayilolin ajiyar ku ba tare da shi ba.",
   "save_backup_password_alert": "Ajiye kalmar sirri ta ajiya",
@@ -719,6 +721,7 @@
   "scan_qr_code": "Gani QR kodin",
   "scan_qr_code_to_get_address": "Duba lambar QR don samun adireshin",
   "scan_qr_on_device": "Duba wannan lambar QR akan wata na'ura",
+  "scrt_extra_info": "Don Allah kar a manta su saka ID na Memo yayin aika yarjejeniyar kungiyar ta musayar",
   "search": "Bincika",
   "search_add_token": "Bincika / Ƙara alama",
   "search_category": "Nemo nau'in",
