--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -417,6 +417,7 @@
   "group_by_type": "प्रकार द्वारा समूह",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
+  "hbar_extra_info": "कृपया एक्सचेंज के लिए HBAR लेनदेन भेजते समय मेमो आईडी निर्दिष्ट करना न भूलें",
   "help": "मदद करना",
   "hidden_addresses": "छिपे हुए पते",
   "hidden_balance": "छिपा हुआ संतुलन",
@@ -710,6 +711,7 @@
   "restore_wallet_restore_description": "बटुआ विवरण पुनर्स्थापित करें",
   "robinhood_option_description": "अपने डेबिट कार्ड, बैंक खाते या रॉबिनहुड बैलेंस का उपयोग करके तुरंत खरीदें और स्थानांतरित करें। केवल यूएसए।",
   "router_no_route": "के लिए कोई मार्ग निर्धारित नहीं है ${name}",
+  "rune_extra_info": "कृपया एक्सचेंज के लिए RUNE लेनदेन भेजते समय मेमो आईडी निर्दिष्ट करना न भूलें",
   "save": "बचाना",
   "save_backup_password": "कृपया सुनिश्चित करें कि आपने अपना बैकअप पासवर्ड सहेज लिया है। आप इसके बिना अपनी बैकअप फ़ाइलों को आयात नहीं कर पाएंगे।",
   "save_backup_password_alert": "बैकअप पासवर्ड सेव करें",
@@ -719,6 +721,7 @@
   "scan_qr_code": "स्कैन क्यू आर कोड",
   "scan_qr_code_to_get_address": "पता प्राप्त करने के लिए QR कोड स्कैन करें",
   "scan_qr_on_device": "इस QR कोड को किसी अन्य डिवाइस पर स्कैन करें",
+  "scrt_extra_info": "कृपया एक्सचेंज के लिए SCRT लेनदेन भेजते समय मेमो आईडी निर्दिष्ट करना न भूलें",
   "search": "खोज",
   "search_add_token": "खोजें/टोकन जोड़ें",
   "search_category": "खोज श्रेणी",
