--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Grupirati",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
+  "hbar_extra_info": "Ne zaboravite navesti ID Memoa dok šaljete HBAR transakciju na razmjenu",
   "help": "pomozite",
   "hidden_addresses": "Skrivene adrese",
   "hidden_balance": "Skriven iznos",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "Opis oporavka novčanika",
   "robinhood_option_description": "Kupite i prebacite odmah pomoću svoje debitne kartice, bankovnog računa ili robinhood salda. Samo SAD.",
   "router_no_route": "Nije definirana ruta za ${name}",
+  "rune_extra_info": "Ne zaboravite navesti ID memorandu",
   "save": "Spremi",
   "save_backup_password": "Molimo pobrinite se da spremite svoju lozinku za sigurnosnu kopiju. Bez nje nećete moći uvesti datoteke sigurnosne kopije.",
   "save_backup_password_alert": "Spremi lozinku za sigurnosnu kopiju",
@@ -717,6 +719,7 @@
   "scan_qr_code": "Skenirajte QR kod",
   "scan_qr_code_to_get_address": "Skeniraj QR kod za dobivanje adrese",
   "scan_qr_on_device": "Skenirajte ovaj QR kod na drugom uređaju",
+  "scrt_extra_info": "Ne zaboravite navesti ID Memoa dok šaljete SCRT transakciju za razmjenu",
   "search": "Traži",
   "search_add_token": "Traži / Dodaj token",
   "search_category": "Kategorija pretraživanja",
