--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Խմբավորել ըստ տեսակի",
   "haven_app": "Haven ծրագիր",
   "haven_app_wallet_text": "Հիանալի հաշվեհամար Haven համար",
+  "hbar_extra_info": "Խնդրում ենք մի մոռացեք նշել MEMO ID- ն, մի ընթացքում HBAR գործարքը փոխանակման համար ուղարկելիս",
   "help": "Օգնություն",
   "hidden_addresses": "Թաքնված հասցեներ",
   "hidden_balance": "Թաքնված մնացորդ",
@@ -707,6 +708,7 @@
   "restore_wallet_restore_description": "Դրամապանակի վերականգնման նկարագրություն",
   "robinhood_option_description": "Գնեք և տեղափոխեք ակնթարթորեն ձեր դեբետային քարտով, բանկային հաշվով կամ Robinhood հաշվեկշռով։ Միայն ԱՄՆ-ում։",
   "router_no_route": "Ոչ մի երթուղի չի սահմանված ${name}",
+  "rune_extra_info": "Խնդրում ենք մի մոռացեք նշել MEMO ID- ն, միաժամանակ փոխանակման համար RUNE գործարքը ուղարկելիս",
   "save": "Պահպանել",
   "save_backup_password": "Խնդրում ենք հաստատել, որ դուք պահպանել եք ձեր կրկնօրինակի գաղտնաբառը։ Դուք չեք կարող ներմուծել ձեր կրկնօրինակ ֆայլերը առանց դրա։",
   "save_backup_password_alert": "Պահպանել կրկնօրինակի գաղտնաբառը",
@@ -716,6 +718,7 @@
   "scan_qr_code": "Սկանավորել QR կոդ",
   "scan_qr_code_to_get_address": "Սկանավորել QR կոդը հասցեն ստանալու համար",
   "scan_qr_on_device": "Սկանավորել այս QR կոդը այլ սարքի վրա",
+  "scrt_extra_info": "Խնդրում ենք մի մոռացեք նշել MEMO ID- ն `SCRT գործարքը փոխանակման համար ուղարկելիս",
   "search": "Որոնել",
   "search_add_token": "Որոնել / Ավելացնել token",
   "search_category": "Որոնել կատեգորիա",
