--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Grup demi jenis",
   "haven_app": "Haven Oleh Cake Wallet",
   "haven_app_wallet_text": "Dompet luar biasa untuk Haven",
+  "hbar_extra_info": "Harap jangan lupa untuk menentukan ID memo saat mengirim transaksi HBAR untuk pertukaran",
   "help": "bantuan",
   "hidden_addresses": "Alamat tersembunyi",
   "hidden_balance": "Saldo Tersembunyi",
@@ -711,6 +712,7 @@
   "restore_wallet_restore_description": "Deskripsi pemulihan dompet",
   "robinhood_option_description": "Beli dan transfer secara instan menggunakan kartu debit, rekening bank, atau saldo robinhood Anda. Hanya AS.",
   "router_no_route": "Tidak ada rute yang ditentukan untuk ${name}",
+  "rune_extra_info": "Tolong jangan lupa untuk menentukan ID memo saat mengirim transaksi rune untuk pertukaran",
   "save": "Simpan",
   "save_backup_password": "Pastikan Anda telah menyimpan kata sandi cadangan Anda. Anda tidak akan dapat mengimpor file cadangan Anda tanpa itu.",
   "save_backup_password_alert": "Simpan kata sandi cadangan",
@@ -720,6 +722,7 @@
   "scan_qr_code": "Scan kode QR untuk mendapatkan alamat",
   "scan_qr_code_to_get_address": "Pindai kode QR untuk mendapatkan alamat",
   "scan_qr_on_device": "Pindai kode QR ini di perangkat lain",
+  "scrt_extra_info": "Harap jangan lupa untuk menentukan ID memo saat mengirim transaksi SCRT untuk pertukaran",
   "search": "Cari",
   "search_add_token": "Cari / Tambahkan token",
   "search_category": "Cari kategori",
