--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -418,6 +418,7 @@
   "group_by_type": "タイプごとにグループ",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
+  "hbar_extra_info": "ExchangeのHBARトランザクションを送信しながら、メモIDを指定することを忘れないでください",
   "help": "ヘルプ",
   "hidden_addresses": "隠されたアドレス",
   "hidden_balance": "隠れたバランス",
@@ -709,6 +710,7 @@
   "restore_wallet_restore_description": "ウォレットの復元",
   "robinhood_option_description": "デビットカード、銀行口座、またはロビンフッドバランスを使用して、即座に購入して転送します。アメリカのみ。",
   "router_no_route": "ルートが定義されていません ${name}",
+  "rune_extra_info": "ExchangeのRuneトランザクションを送信しながら、メモIDを指定することを忘れないでください",
   "save": "セーブ",
   "save_backup_password": "バックアップパスワードが保存されていることを確認してください。 それなしではバックアップファイルをインポートすることはできません。",
   "save_backup_password_alert": "バックアップパスワードを保存する",
@@ -718,6 +720,7 @@
   "scan_qr_code": "QRコードをスキャン",
   "scan_qr_code_to_get_address": "QRコードをスキャンして住所を取得します",
   "scan_qr_on_device": "別のデバイスでこの QR コードをスキャンします",
+  "scrt_extra_info": "ExchangeのSCRTトランザクションを送信しながら、メモIDを指定することを忘れないでください",
   "search": "検索",
   "search_add_token": "トークンの検索/追加",
   "search_category": "検索カテゴリ",
