--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -417,6 +417,7 @@
   "group_by_type": "အမျိုးအစားအလိုက်အုပ်စုဖွဲ့",
   "haven_app": "ဟေးဗင် ကိတ် ဝေါလက်",
   "haven_app_wallet_text": "ဟေဗင်အတွက် အံ့ဩစရာကောင်းတဲ့ ပိုက်ဆံအုံး",
+  "hbar_extra_info": "ဖလှယ်မှုအတွက် HBAR ငွေပေးငွေယူကိုပို့နေစဉ် Memo ID ကိုသတ်မှတ်ရန်မမေ့ပါနှင့်",
   "help": "ကူညီပါ",
   "hidden_addresses": "လျှို့ဝှက်လိပ်စာများ",
   "hidden_balance": "Hidden Balance",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "Wallet ပြန်လည်ရယူသည့် ဖော်ပြချက်",
   "robinhood_option_description": "သင်၏ဒက်ဘစ်ကဒ်, ဘဏ်အကောင့်, ယူအက်စ်အေသာ။",
   "router_no_route": "${name} အတွက် သတ်မှတ်ထားသော လမ်းကြောင်းမရှိပါ",
+  "rune_extra_info": "ငွေလဲလှယ်မှုအတွက် Rune ငွေပေးငွေယူပေးပို့စဉ် Memo ID ကိုသတ်မှတ်ရန်မမေ့ပါနှင့်",
   "save": "သိမ်းဆည်းပါ။",
   "save_backup_password": "သင်၏ အရန်စကားဝှက်ကို သိမ်းဆည်းထားကြောင်း သေချာပါစေ။ ၎င်းမပါဘဲ သင်၏ အရန်ဖိုင်များကို တင်သွင်းနိုင်မည် မဟုတ်ပါ။",
   "save_backup_password_alert": "အရန်စကားဝှက်ကို သိမ်းဆည်းပါ။",
@@ -717,6 +719,7 @@
   "scan_qr_code": "QR ကုဒ်ကို စကင်န်ဖတ်ပါ။",
   "scan_qr_code_to_get_address": "လိပ်စာရယူရန် QR ကုဒ်ကို စကင်န်ဖတ်ပါ။",
   "scan_qr_on_device": "အခြားစက်တွင် ဤ QR ကုဒ်ကို စကင်ဖတ်ပါ။",
+  "scrt_extra_info": "ငွေလဲလှယ်မှုအတွက် SCRT ငွေပေးငွေယူကိုပေးပို့စဉ် Memo ID ကိုသတ်မှတ်ရန်မမေ့ပါနှင့်",
   "search": "ရှာရန်",
   "search_add_token": "ရှာဖွေရန် / တိုကင်ထည့်ပါ။",
   "search_category": "ရှာဖွေမှုအမျိုးအစား",
