--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Groep voor type",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
+  "hbar_extra_info": "Vergeet niet om de memo -ID op te geven tijdens het verzenden van de HBAR -transactie voor de uitwisseling",
   "help": "helpen",
   "hidden_addresses": "Verborgen adressen",
   "hidden_balance": "Verborgen balans",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "Portemonnee-herstelbeschrijving",
   "robinhood_option_description": "Koop en zet direct over op uw bankpas, bankrekening of Robinhood -saldo. Alleen VS.",
   "router_no_route": "Geen route gedefinieerd voor ${name}",
+  "rune_extra_info": "Vergeet niet om de memo -ID op te geven tijdens het verzenden van de rune -transactie voor de uitwisseling",
   "save": "Opslaan",
   "save_backup_password": "Zorg ervoor dat u uw reservewachtwoord heeft opgeslagen. Zonder dit kunt u uw back-upbestanden niet importeren.",
   "save_backup_password_alert": "Bewaar back-upwachtwoord",
@@ -717,6 +719,7 @@
   "scan_qr_code": "Scan QR-code",
   "scan_qr_code_to_get_address": "Scan de QR-code om het adres te krijgen",
   "scan_qr_on_device": "Scan deze QR-code op een ander apparaat",
+  "scrt_extra_info": "Vergeet niet om de memo -ID op te geven tijdens het verzenden van de SCRT -transactie voor de uitwisseling",
   "search": "Zoekopdracht",
   "search_add_token": "Token zoeken / toevoegen",
   "search_category": "Zoek categorie",
