--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Grupa według typu",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
+  "hbar_extra_info": "Nie zapomnij określić identyfikatora notatki podczas wysyłania transakcji HBAR dla wymiany",
   "help": "pomoc",
   "hidden_addresses": "Ukryte adresy",
   "hidden_balance": "Ukryte saldo",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "Przywracanie portfela",
   "robinhood_option_description": "Kup i przenieś natychmiast za pomocą karty debetowej, konta bankowego lub salda Robinhood. Tylko USA.",
   "router_no_route": "Brak zdefiniowanej trasy dla ${name}",
+  "rune_extra_info": "Nie zapomnij określić identyfikatora notatki podczas wysyłania transakcji rune dla giełdy",
   "save": "Zapisz",
   "save_backup_password": "Upewnij się, że zapisałeś swoje hasło kopii zapasowej. Bez tego nie będziesz mógł zaimportować pliku kopii zapasowej.",
   "save_backup_password_alert": "Zapisz hasło kopii zapasowej",
@@ -717,6 +719,7 @@
   "scan_qr_code": "Skanowania QR code",
   "scan_qr_code_to_get_address": "Zeskanuj kod QR, aby uzyskać adres",
   "scan_qr_on_device": "Zeskanuj ten kod QR na innym urządzeniu",
+  "scrt_extra_info": "Nie zapomnij określić identyfikatora notatki podczas wysyłania transakcji SCRT dla wymiany",
   "search": "Szukaj",
   "search_add_token": "Wyszukaj / Dodaj token",
   "search_category": "Kategoria wyszukiwania",
