--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Grupo por tipo",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
+  "hbar_extra_info": "Por favor, não se esqueça de especificar o ID do memorando ao enviar a transação HBAR para a troca",
   "help": "ajuda",
   "hidden_addresses": "Endereços ocultos",
   "hidden_balance": "Saldo escondido",
@@ -710,6 +711,7 @@
   "restore_wallet_restore_description": "Restauração da carteira",
   "robinhood_option_description": "Compre e transfira instantaneamente usando seu cartão de débito, conta bancária ou saldo de Robinhood. EUA apenas.",
   "router_no_route": "Nenhuma rota definida para ${name}",
+  "rune_extra_info": "Não se esqueça de especificar o ID do memorando ao enviar a transação da Rune para a troca",
   "save": "Salvar",
   "save_backup_password": "Certifique-se de que salvou sua senha de backup. Você não poderá importar seus arquivos de backup sem ele.",
   "save_backup_password_alert": "Salvar senha de backup",
@@ -719,6 +721,7 @@
   "scan_qr_code": "Escanear código QR",
   "scan_qr_code_to_get_address": "Digitalize o código QR para obter o endereço",
   "scan_qr_on_device": "Digitalize este código QR em outro dispositivo",
+  "scrt_extra_info": "Não se esqueça de especificar o ID do memorando ao enviar a transação SCRT para a troca",
   "search": "Procurar",
   "search_add_token": "Pesquisar / Adicionar token",
   "search_category": "Categoria de pesquisa",
