--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Группа по типу",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
+  "hbar_extra_info": "Пожалуйста, не забудьте указать идентификатор записки при отправке транзакции HBAR для обмена",
   "help": "помощь",
   "hidden_addresses": "Скрытые адреса",
   "hidden_balance": "Скрытый баланс",
@@ -709,6 +710,7 @@
   "restore_wallet_restore_description": "Описание восстановления кошелька",
   "robinhood_option_description": "Покупайте и перенесите мгновенно, используя свою дебетовую карту, банковский счет или баланс Robinhood. Только США.",
   "router_no_route": "Не установлен маршрут для ${name}",
+  "rune_extra_info": "Пожалуйста, не забудьте указать идентификатор записки при отправке рунической транзакции для обмена",
   "save": "Сохранить",
   "save_backup_password": "Убедитесь, что вы сохранили пароль резервной копии. Без него вы не сможете импортировать файлы резервных копий.",
   "save_backup_password_alert": "Сохранить пароль резервной копии",
@@ -718,6 +720,7 @@
   "scan_qr_code": "Сканировать QR-код",
   "scan_qr_code_to_get_address": "Отсканируйте QR-код для получения адреса",
   "scan_qr_on_device": "Отсканируйте этот QR-код на другом устройстве",
+  "scrt_extra_info": "Пожалуйста, не забудьте указать идентификатор записки при отправке транзакции SCRT для обмена",
   "search": "Поиск",
   "search_add_token": "Поиск / Добавить токен",
   "search_category": "Категория поиска",
