--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -417,6 +417,7 @@
   "group_by_type": "กลุ่มตามประเภท",
   "haven_app": "Haven ของ Cake Wallet",
   "haven_app_wallet_text": "กระเป๋าสตางค์ที่สวยงามสำหรับ Haven",
+  "hbar_extra_info": "โปรดอย่าลืมระบุรหัสบันทึกในขณะที่ส่งธุรกรรม HBAR สำหรับการแลกเปลี่ยน",
   "help": "ช่วยเหลือ",
   "hidden_addresses": "ที่อยู่ที่ซ่อนอยู่",
   "hidden_balance": "ยอดคงเหลือซ่อนอยู่",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "คำอธิบายการกู้กระเป๋า",
   "robinhood_option_description": "ซื้อและโอนทันทีโดยใช้บัตรเดบิตบัญชีธนาคารหรือยอดคงเหลือของ Robinhood สหรัฐอเมริกาเท่านั้น",
   "router_no_route": "ไม่มีเส้นทางที่กำหนดไว้สำหรับ ${name}",
+  "rune_extra_info": "โปรดอย่าลืมระบุรหัสบันทึกในขณะที่ส่งธุรกรรมรูนสำหรับการแลกเปลี่ยน",
   "save": "บันทึก",
   "save_backup_password": "โปรดตรวจสอบให้แน่ใจว่าคุณได้บันทึกรหัสผ่านสำรองข้อมูลแล้ว คุณจะไม่สามารถนำเข้าไฟล์สำรองข้อมูลของคุณโดยไม่ใช้รหัสผ่านนั้น",
   "save_backup_password_alert": "บันทึกรหัสผ่านสำรอง",
@@ -717,6 +719,7 @@
   "scan_qr_code": "สแกนรหัส QR",
   "scan_qr_code_to_get_address": "สแกน QR code เพื่อรับที่อยู่",
   "scan_qr_on_device": "สแกนโค้ด QR นี้บนอุปกรณ์อื่น",
+  "scrt_extra_info": "โปรดอย่าลืมระบุรหัสบันทึกในขณะที่ส่งธุรกรรม SCRT สำหรับการแลกเปลี่ยน",
   "search": "ค้นหา",
   "search_add_token": "ค้นหา / เพิ่มโทเค็น",
   "search_category": "ค้นหาหมวดหมู่",
