--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Pangkat ayon sa uri",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Kahanga-hangang wallet para sa Haven",
+  "hbar_extra_info": "Mangyaring huwag kalimutan na tukuyin ang memo ID habang nagpapadala ng transaksyon sa HBAR para sa palitan",
   "help": "Tulong",
   "hidden_addresses": "Nakatagong mga address",
   "hidden_balance": "Nakatagong Balanse",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "Paglalarawan ng pagpapanumbalik ng wallet",
   "robinhood_option_description": "Bumili at ilipat kaagad gamit ang iyong debit card, bank account, o balanse ng Robinhood. USA lang.",
   "router_no_route": "Walang tinukoy na ruta para sa ${name}",
+  "rune_extra_info": "Mangyaring huwag kalimutan na tukuyin ang memo ID habang ipinapadala ang transaksyon ng rune para sa palitan",
   "save": "I-save",
   "save_backup_password": "Pakitiyak na nai-save mo ang iyong backup na password. Hindi mo mai-import ang iyong mga backup na file kun wala ito.",
   "save_backup_password_alert": "I-save ang backup na password",
@@ -717,6 +719,7 @@
   "scan_qr_code": "I-scan ang QR code",
   "scan_qr_code_to_get_address": "I-scan ang QR code upang makuha ang address",
   "scan_qr_on_device": "I-scan ang QR code na ito sa ibang device",
+  "scrt_extra_info": "Mangyaring huwag kalimutan na tukuyin ang memo ID habang ipinapadala ang transaksyon ng SCRT para sa palitan",
   "search": "Maghanap",
   "search_add_token": "Maghanap / Magdagdag ng Token",
   "search_category": "Kategorya ng paghahanap",
