--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Türüne göre grup",
   "haven_app": "Cake Wallet tarafından Haven",
   "haven_app_wallet_text": "Haven için harika cüzdan ",
+  "hbar_extra_info": "Lütfen Borsa için HBAR işlemini gönderirken not kimliğini belirtmeyi unutmayın.",
   "help": "yardım",
   "hidden_addresses": "Gizli adresler",
   "hidden_balance": "Gizli Bakiye",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "Cüzdan geri döndürme açıklaması",
   "robinhood_option_description": "Banka kartınızı, banka hesabınızı veya Robinhood bakiyenizi kullanarak anında satın alın ve aktarın. Sadece ABD.",
   "router_no_route": "${name} için rota tanımlanmadı",
+  "rune_extra_info": "Lütfen Borsa için Rune işlemini gönderirken not kimliğini belirtmeyi unutmayın",
   "save": "Kaydet",
   "save_backup_password": "Lütfen yedekleme parolanı kaydettiğinden emin ol.  Bu parola olmadan yedekleme dosyasını içe aktaramazsın.",
   "save_backup_password_alert": "Yedek parolasını kaydet",
@@ -717,6 +719,7 @@
   "scan_qr_code": "QR kodunu tarayın",
   "scan_qr_code_to_get_address": "Adresi getirmek için QR kodunu tara",
   "scan_qr_on_device": "Bu QR kodunu başka bir cihazda tarayın",
+  "scrt_extra_info": "Lütfen değişim için SCRT işlemini gönderirken not kimliğini belirtmeyi unutmayın.",
   "search": "Arat",
   "search_add_token": "Belirteç Ara / Ekle",
   "search_category": "Kategori ara",
