--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Група за типом",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
+  "hbar_extra_info": "Не забудьте вказати ідентифікатор пам’яті під час надсилання транзакції HBAR для обміну",
   "help": "допомога",
   "hidden_addresses": "Приховані адреси",
   "hidden_balance": "Прихований баланс",
@@ -709,6 +710,7 @@
   "restore_wallet_restore_description": "Опис відновлюваного гаманця",
   "robinhood_option_description": "Купуйте та перенесіть миттєво за допомогою дебетової картки, банківського рахунку або балансу Робінства. Тільки США.",
   "router_no_route": "Не встановлено маршрут для ${name}",
+  "rune_extra_info": "Не забудьте вказати ідентифікатор пам’яті під час надсилання транзакції RUE для обміну",
   "save": "Зберегти",
   "save_backup_password": "Переконайтеся, що ви зберегли свій пароль резервної копії. Без нього ви не зможете імпортувати файли резервних копій.",
   "save_backup_password_alert": "Зберегти пароль резервної копії",
@@ -718,6 +720,7 @@
   "scan_qr_code": "Відскануйте QR-код",
   "scan_qr_code_to_get_address": "Скануйте QR-код для одержання адреси",
   "scan_qr_on_device": "Відскануйте цей QR-код на іншому пристрої",
+  "scrt_extra_info": "Не забудьте вказати ідентифікатор пам’яті під час надсилання транзакції SCRT для обміну",
   "search": "Пошук",
   "search_add_token": "Пошук / Додати маркер",
   "search_category": "Категорія пошуку",
