--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -417,6 +417,7 @@
   "group_by_type": "قسم کے لحاظ سے گروپ",
   "haven_app": "Haven از Cake والیٹ",
   "haven_app_wallet_text": "Havek کے لیے زبردست پرس",
+  "hbar_extra_info": "ایکسچینج کے لئے HBAR ٹرانزیکشن بھیجتے وقت براہ کرم میمو ID کی وضاحت کرنا نہ بھولیں",
   "help": "مدد",
   "hidden_addresses": "پوشیدہ پتے",
   "hidden_balance": "پوشیدہ بیلنس",
@@ -710,6 +711,7 @@
   "restore_wallet_restore_description": "والیٹ کی بحالی کی تفصیل",
   "robinhood_option_description": "اپنے ڈیبٹ کارڈ ، بینک اکاؤنٹ ، یا رابن ہڈ بیلنس کا استعمال کرتے ہوئے فوری طور پر خریدیں اور منتقلی کریں۔ صرف USA",
   "router_no_route": "${name} کے لیے کوئی راستہ متعین نہیں ہے",
+  "rune_extra_info": "ایکسچینج کے لئے رون ٹرانزیکشن بھیجتے وقت براہ کرم میمو آئی ڈی کی وضاحت کرنا نہ بھولیں",
   "save": "محفوظ کریں۔",
   "save_backup_password": "براہ کرم یقینی بنائیں کہ آپ نے اپنا بیک اپ پاس ورڈ محفوظ کر لیا ہے۔ آپ اس کے بغیر اپنی بیک اپ فائلیں درآمد نہیں کر سکیں گے۔",
   "save_backup_password_alert": "بیک اپ پاس ورڈ محفوظ کریں۔",
@@ -719,6 +721,7 @@
   "scan_qr_code": "پتہ حاصل کرنے کے لیے QR کوڈ اسکین کریں۔",
   "scan_qr_code_to_get_address": "پتہ حاصل کرنے کے لئے QR کوڈ کو اسکین کریں",
   "scan_qr_on_device": "                                    ۔ﮟﯾﺮﮐ ﻦﯿﮑﺳﺍ ﺮﭘ ﺲﺋﺍﻮﯾﮈ ﺭﻭﺍ ﯽﺴﮐ ﻮﮐ ﮈﻮﮐ QR ﺱﺍ",
+  "scrt_extra_info": "ایکسچینج کے لئے SCRT ٹرانزیکشن بھیجتے وقت براہ کرم میمو ID کی وضاحت کرنا نہ بھولیں",
   "search": "تلاش کریں۔",
   "search_add_token": "تلاش کریں / ٹوکن شامل کریں۔",
   "search_category": "زمرہ تلاش کریں۔",
