--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -416,6 +416,7 @@
   "group_by_type": "Nhóm theo loại",
   "haven_app": "Haven bởi Cake Wallet",
   "haven_app_wallet_text": "Ví tuyệt vời cho Haven",
+  "hbar_extra_info": "Xin đừng quên chỉ định ID ghi nhớ trong khi gửi giao dịch Hbar cho Sàn giao dịch",
   "help": "Trợ giúp",
   "hidden_addresses": "Địa chỉ ẩn",
   "hidden_balance": "Số dư ẩn",
@@ -706,6 +707,7 @@
   "restore_wallet_restore_description": "Mô tả khôi phục ví",
   "robinhood_option_description": "Mua và chuyển ngay lập tức bằng thẻ ghi nợ, tài khoản ngân hàng hoặc số dư Robinhood của bạn. Chỉ có ở Mỹ.",
   "router_no_route": "Không có tuyến đường nào được định nghĩa cho ${name}",
+  "rune_extra_info": "Xin đừng quên chỉ định ID ghi nhớ trong khi gửi giao dịch Rune để trao đổi",
   "save": "Lưu",
   "save_backup_password": "Vui lòng đảm bảo rằng bạn đã lưu mật khẩu sao lưu của mình. Bạn sẽ không thể nhập tệp sao lưu của mình nếu không có nó.",
   "save_backup_password_alert": "Lưu mật khẩu sao lưu",
@@ -715,6 +717,7 @@
   "scan_qr_code": "Quét mã QR",
   "scan_qr_code_to_get_address": "Quét mã QR để nhận địa chỉ",
   "scan_qr_on_device": "Quét mã QR này trên thiết bị khác",
+  "scrt_extra_info": "Xin đừng quên chỉ định ID ghi nhớ trong khi gửi giao dịch SCRT để trao đổi",
   "search": "Tìm kiếm",
   "search_add_token": "Tìm kiếm / Thêm token",
   "search_category": "Tìm kiếm danh mục",
