--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -418,6 +418,7 @@
   "group_by_type": "Ẹgbẹ nipasẹ Iru",
   "haven_app": "Haven latí ọwọ́ Cake Wallet",
   "haven_app_wallet_text": "Àpamọ́wọ́ Haven wà pa",
+  "hbar_extra_info": "Jọwọ maṣe gbagbe lati tokasi ID akọsilẹ lakoko fifiranṣẹ idunadura HBAR fun paṣipaarọ naa",
   "help": "ìranlọ́wọ́",
   "hidden_addresses": "Awọn adirẹsi ti o farapamọ",
   "hidden_balance": "Ìyókù owó dídé",
@@ -709,6 +710,7 @@
   "restore_wallet_restore_description": "Ìṣapẹrẹ mú àpamọ́wọ́ padà",
   "robinhood_option_description": "Ra ati Gbe lesekese lilo kaadi debiti rẹ, akọọlẹ banki, tabi iwọntunwọnsi robinrere. USA nikan.",
   "router_no_route": "Ọ̀nà kò sí fún ${name}",
+  "rune_extra_info": "Jọwọ maṣe gbagbe lati tokasi ID akọsilẹ lakoko fifiranṣẹ idunadura fun paṣipaarọ naa",
   "save": "Pamọ́",
   "save_backup_password": "Ẹ jọ̀wọ́ dájú pé ẹ ti pamọ́ ọ̀rọ̀ aṣínà ti ẹ̀dà nípamọ́ yín. Ti ẹ kò bá ni í, ẹ kò lè ṣí àwọn àkọsílẹ̀ nípamọ́ yín.",
   "save_backup_password_alert": "Pamọ́ ọ̀rọ̀ aṣínà ti ẹ̀dà",
@@ -718,6 +720,7 @@
   "scan_qr_code": "Yan QR koodu",
   "scan_qr_code_to_get_address": "Ṣayẹwo koodu QR naa lati gba adirẹsi naa",
   "scan_qr_on_device": "Ṣe ayẹwo koodu QR yii lori ẹrọ miiran",
+  "scrt_extra_info": "Jọwọ maṣe gbagbe lati tokasi ID akọsilẹ lakoko fifiranṣẹ idunadura ti o nwọle fun paṣipaarọ naa",
   "search": "Wá",
   "search_add_token": "Wa / Fi àmi kun",
   "search_category": "Wá nínú ẹgbẹ́",
