--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -417,6 +417,7 @@
   "group_by_type": "按类型组",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Awesome wallet for Haven",
+  "hbar_extra_info": "请不要忘记在发送HBAR交易时指定备忘录",
   "help": "帮助",
   "hidden_addresses": "隐藏的地址",
   "hidden_balance": "隐藏余额",
@@ -708,6 +709,7 @@
   "restore_wallet_restore_description": "钱包还原说明",
   "robinhood_option_description": "使用您的借记卡，银行帐户或罗比林余额立即购买和转移。仅美国。",
   "router_no_route": "未定义路线 ${name}",
+  "rune_extra_info": "请不要忘记在发送符文交易时指定备忘录",
   "save": "保存",
   "save_backup_password": "请确保您已保存备份密码。 沒有它，您将无法导入备份文件。",
   "save_backup_password_alert": "保存备份密码",
@@ -717,6 +719,7 @@
   "scan_qr_code": "扫描二维码",
   "scan_qr_code_to_get_address": "扫描二维码获取地址",
   "scan_qr_on_device": "在另一台设备上扫描此二维码",
+  "scrt_extra_info": "请不要忘记在发送SCRT交易时指定备忘录",
   "search": "搜索",
   "search_add_token": "搜索/添加令牌",
   "search_category": "搜索类别",
