--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Gruppe nach Typ",
   "haven_app": "Haven von Cake Wallet",
   "haven_app_wallet_text": "Eine großartige Wallet für Haven",
+  "hbar_extra_info": "Bitte vergessen Sie nicht, die Memo -ID anzugeben, während Sie die HBAR -Transaktion für den Austausch senden",
   "help": "hilfe",
   "hidden_addresses": "Versteckte Adressen",
   "hidden_balance": "Verstecktes Guthaben",
@@ -709,6 +710,7 @@
   "restore_wallet_restore_description": "Beschreibung zur Wallet-Wiederherstellung",
   "robinhood_option_description": "Kaufen und übertragen Sie sofort mit Ihrem Debitkarten-, Bankkonto- oder Robinhood-Guthaben. Nur USA.",
   "router_no_route": "Keine Route definiert für ${name}",
+  "rune_extra_info": "Bitte vergessen Sie nicht, die Memo -ID anzugeben, während Sie die Rune -Transaktion für den Austausch senden",
   "save": "Speichern",
   "save_backup_password": "Bitte stellen Sie sicher, dass Sie Ihr Sicherungskennwort gespeichert haben. Ohne dieses können Sie Ihre Sicherungsdateien nicht importieren.",
   "save_backup_password_alert": "Sicherungskennwort speichern",
@@ -718,6 +720,7 @@
   "scan_qr_code": "QR-Code scannen",
   "scan_qr_code_to_get_address": "Scannen Sie den QR-Code, um die Adresse zu erhalten",
   "scan_qr_on_device": "Scannen Sie diesen QR-Code auf einem anderen Gerät",
+  "scrt_extra_info": "Bitte vergessen Sie nicht, die Memo -ID anzugeben, während Sie die SCRT -Transaktion für den Austausch senden",
   "search": "Suche",
   "search_add_token": "Token suchen / hinzufügen",
   "search_category": "Suchkategorie",
