--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -417,6 +417,7 @@
   "group_by_type": "Raggruppa per tipo",
   "haven_app": "Haven di Cake Wallet",
   "haven_app_wallet_text": "Portafoglio fantastico per Haven",
+  "hbar_extra_info": "Non dimenticare di specificare l'ID memo durante l'invio della transazione HBAR per lo scambio",
   "help": "aiuto",
   "hidden_addresses": "Indirizzi nascosti",
   "hidden_balance": "Saldo Nascosto",
@@ -709,6 +710,7 @@
   "restore_wallet_restore_description": "Descrizione recupero portafoglio",
   "robinhood_option_description": "Acquista e trasferisci istantaneamente utilizzando la carta di debito, il conto bancario o il saldo di Robinhood. Solo USA.",
   "router_no_route": "Nessun percorso definito per ${name}",
+  "rune_extra_info": "Non dimenticare di specificare l'ID memo durante l'invio della transazione rune per lo scambio",
   "save": "Salva",
   "save_backup_password": "Assicurati di aver salvato la password del tuo backup.  Senza questa non sarai in grado di importare i tuoi file di backup.",
   "save_backup_password_alert": "Salva password Backup",
@@ -718,6 +720,7 @@
   "scan_qr_code": "Scansiona il codice QR",
   "scan_qr_code_to_get_address": "Scansiona il codice QR per ottenere l'indirizzo",
   "scan_qr_on_device": "Scansiona questo codice QR su un altro dispositivo",
+  "scrt_extra_info": "Non dimenticare di specificare l'ID memo durante l'invio della transazione SCRT per lo scambio",
   "search": "Ricerca",
   "search_add_token": "Cerca / Aggiungi token",
   "search_category": "Categoria di ricerca",
