--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -417,6 +417,7 @@
   "group_by_type": "유형별 그룹화",
   "haven_app": "Haven by Cake Wallet",
   "haven_app_wallet_text": "Haven을 위한 멋진 지갑",
+  "hbar_extra_info": "교환을 위해 HBAR 트랜잭션을 보내는 동안 메모 ID를 지정하는 것을 잊지 마십시오.",
   "help": "도움말",
   "hidden_addresses": "숨겨진 주소",
   "hidden_balance": "숨겨진 잔액",
@@ -709,6 +710,7 @@
   "restore_wallet_restore_description": "지갑 복구 설명",
   "robinhood_option_description": "직불 카드, 은행 계좌 또는 Robinhood 잔액을 사용하여 즉시 구매 및 이체. 미국 전용.",
   "router_no_route": "${name}에 대해 정의된 경로 없음",
+  "rune_extra_info": "교환을 위해 룬 거래를 보내는 동안 메모 ID를 지정하는 것을 잊지 마십시오.",
   "save": "저장",
   "save_backup_password": "백업 비밀번호를 저장했는지 확인하세요. 없으면 백업 파일을 가져올 수 없습니다.",
   "save_backup_password_alert": "백업 비밀번호 저장",
@@ -718,6 +720,7 @@
   "scan_qr_code": "QR 코드 스캔",
   "scan_qr_code_to_get_address": "주소를 얻으려면 QR 코드를 스캔하세요",
   "scan_qr_on_device": "다른 기기에서 이 QR 코드 스캔",
+  "scrt_extra_info": "교환을 위해 SCRT 거래를 보내는 동안 메모 ID를 지정하는 것을 잊지 마십시오.",
   "search": "검색",
   "search_add_token": "토큰 검색 / 추가",
   "search_category": "카테고리 검색",
